--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint --fix",
-    "commit": "git-cz"
+    "commit": "git add . && git cz"
   },
   "dependencies": {
     "core-js": "^3.6.4",
