--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@d2-projects/vue-filename-injector": "^1.1.1",
     "@vue/cli-plugin-babel": "^4.3.0",
     "@vue/cli-plugin-eslint": "^4.3.0",
     "@vue/cli-plugin-router": "^4.3.0",
