--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build --report",
-    "lint": "vue-cli-service lint --fix"
+    "lint": "vue-cli-service lint --fix",
+    "dev": "vue-cli-service serve"
   },
   "dependencies": {
     "core-js": "^3.6.4",
@@ -14,6 +14,7 @@
     "lodash": "^4.17.15",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-router-layout": "^0.1.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
@@ -34,6 +35,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "vue-auto-routing": "^0.4.0",
+    "vue-cli-plugin-auto-routing": "^0.3.3",
     "vue-template-compiler": "^2.6.11"
   },
   "config": {
