--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "element-ui": "^2.13.1",
     "flex.css": "^1.1.7",
     "lodash": "^4.17.15",
+    "overlayscrollbars": "^1.12.0",
+    "overlayscrollbars-vue": "^0.2.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vue-router-layout": "^0.1.2",
