--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/d2-projects/storybook-vue.git"
   }
 }
